--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -72,7 +72,7 @@
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <Icon_MainIcon>Evemini_Icon.ico</Icon_MainIcon>
-        <Debugger_RunParams>--name=&quot;Grimen&quot; --form-x=1868 --form-y=882 --form-width=687 --form-height=160 --game-x=1866 --game-y=550</Debugger_RunParams>
+        <Debugger_RunParams>--name=&quot;Elle Tan&quot; --form-x=1868 --form-y=882 --form-width=687 --form-height=160 --game-x=1866 --game-y=550</Debugger_RunParams>
         <AppEnableHighDPI>true</AppEnableHighDPI>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
