--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 *~
 *.dcu
-*.local
 *.identcache
-*.exe
+*.local
+*.stat
+Win32/*
+
 run.bat
-Evemini.stat
-Win32/Debug/*.ini
-Win32/Release/*.ini
 evemini.zip
