--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -105,6 +105,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="UnitProcessLibrary.pas"/>
+        <DCCReference Include="UnitGetBuild.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
