--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -106,6 +106,7 @@
         </DCCReference>
         <DCCReference Include="UnitProcessLibrary.pas"/>
         <DCCReference Include="UnitGetBuild.pas"/>
+        <DCCReference Include="UnitInlineMacros.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
