--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -107,6 +107,10 @@
         <DCCReference Include="UnitProcessLibrary.pas"/>
         <DCCReference Include="UnitGetBuild.pas"/>
         <DCCReference Include="UnitInlineMacros.pas"/>
+        <DCCReference Include="UnitEveminiMain.pas">
+            <Form>FormEveminiMain</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
