--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -109,8 +109,7 @@
         </DCCReference>
         <DCCReference Include="UnitGetBuild.pas"/>
         <DCCReference Include="UnitInlineMacros.pas"/>
-        <DCCReference Include="UnitProcessLibrary.pas">
-        </DCCReference>
+        <DCCReference Include="UnitProcessLibrary.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
