--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -110,6 +110,7 @@
         <DCCReference Include="UnitGetBuild.pas"/>
         <DCCReference Include="UnitInlineMacros.pas"/>
         <DCCReference Include="UnitProcessLibrary.pas"/>
+        <DCCReference Include="UnitString.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
