--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -119,6 +119,7 @@
         <DCCReference Include="UnitInlineMacros.pas"/>
         <DCCReference Include="UnitProcessLibrary.pas"/>
         <DCCReference Include="UnitString.pas"/>
+        <None Include="README.md"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
