--- a/YouTube - Mozilla Firefox.ini
+++ b/YouTube - Mozilla Firefox.ini
@@ -5,10 +5,13 @@ top=178
 width=634
 height=355
 [form]
-left=117
-top=485
+left=875
+top=0
 width=318
 height=178
+color=clBtnFace
+opacity-enable=0
+opacity-value=170
 [check]
 window-movable=1
 window-sizable=1
@@ -16,3 +19,10 @@ always-visible=0
 window-proportion=1
 invert-wheel=0
 window-stick=1
+window-border=0
+hide-if-target-active=1
+[border]
+default-color=clGray
+active-color=clLime
+default-width=1
+active-width=3
