--- a/Twitch - Mozilla Firefox.ini
+++ b/Twitch - Mozilla Firefox.ini
@@ -5,10 +5,13 @@ top=218
 width=596
 height=334
 [form]
-left=117
-top=315
+left=895
+top=0
 width=298
 height=167
+color=clBtnFace
+opacity-enable=0
+opacity-value=170
 [check]
 window-movable=1
 window-sizable=1
@@ -16,3 +19,10 @@ always-visible=0
 window-proportion=1
 invert-wheel=0
 window-stick=1
+window-border=0
+hide-if-target-active=1
+[border]
+default-color=clGray
+active-color=clLime
+default-width=1
+active-width=3
