--- a/Evemini.dproj
+++ b/Evemini.dproj
@@ -76,7 +76,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <VerInfo_Keys>CompanyName=Truekenny;FileDescription=Evemini Debug Version;FileVersion=1.6.0.0;InternalName=Evemini;LegalCopyright=;LegalTrademarks=;OriginalFilename=Evemini.exe;ProductName=Evemini;ProductVersion=0.7;Comments=https://github.com/truekenny/evemini;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=Truekenny;FileDescription=Evemini Debug Version;FileVersion=1.6.1.0;InternalName=Evemini;LegalCopyright=;LegalTrademarks=;OriginalFilename=Evemini.exe;ProductName=Evemini;ProductVersion=0.7;Comments=https://github.com/truekenny/evemini;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
         <VerInfo_MinorVer>6</VerInfo_MinorVer>
         <VerInfo_AutoGenVersion>true</VerInfo_AutoGenVersion>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
@@ -85,6 +85,7 @@
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppDPIAwarenessMode>PerMonitor</AppDPIAwarenessMode>
+        <VerInfo_Release>1</VerInfo_Release>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
@@ -95,13 +96,14 @@
         <DCC_DebugInformation>0</DCC_DebugInformation>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
-        <VerInfo_Keys>CompanyName=Truekenny;FileDescription=Evemini Release;FileVersion=1.6.0.0;InternalName=Evemini;LegalCopyright=;LegalTrademarks=;OriginalFilename=Evemini.exe;ProductName=Evemini;ProductVersion=0.7;Comments=https://github.com/truekenny/evemini;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=Truekenny;FileDescription=Evemini Release;FileVersion=1.6.1.0;InternalName=Evemini;LegalCopyright=;LegalTrademarks=;OriginalFilename=Evemini.exe;ProductName=Evemini;ProductVersion=0.7;Comments=https://github.com/truekenny/evemini;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
         <VerInfo_MinorVer>6</VerInfo_MinorVer>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <Icon_MainIcon>Evemini_Icon.ico</Icon_MainIcon>
         <VerInfo_AutoGenVersion>true</VerInfo_AutoGenVersion>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppDPIAwarenessMode>PerMonitor</AppDPIAwarenessMode>
+        <VerInfo_Release>1</VerInfo_Release>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
